# multiagent

./: README.md  gui.py  pyproject.toml  registry.py  run_e2e.py
agents/: base.py  llm_agent.py  math_agent.py  quote_agent.py  search_agent.py
tests/: test_e2e.py
