[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent"
version = "0.1.0"
description = "A multi-agent system framework"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "rtreit"}
]
dependencies = [
    "anyio",
    "fastmcp",
    "python-a2a",
    "requests",
    "langgraph",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["agents"]

[tool.pytest]
testpaths = ["tests"]
